--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
     padding: 0;
@@ -50,13 +51,21 @@ button {
 
 .header-links,
 .hero-sub {
-    font-size: 18px;
+    font-size: 15px;
     color: #E5E7EB;
 }
 
 .header-title {
     font-size: 24px;
     color: #F9FAF9;
+}
+
+.sub-title {
+    padding: 35px 0;
+    text-align: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937
 }
 
 .hero {
@@ -87,4 +96,33 @@ button {
     font-size: 48px;
     color: #F9FAF8;
     font-weight: 900;
+}
+
+.profile-text {
+    font-size: 15px;
+    color: #1F2937;
+    text-align: center;
+}
+
+.sub-container {
+    width: 900px;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
+.image-container {
+    width: 150px;
+    height: 150px;
+    border: 3px solid #3882F6;
+    border-radius: 12px;
+}
+
+.profile {
+    max-width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 100px;
 }
