--- a/style.css
+++ b/style.css
@@ -126,3 +126,29 @@ button {
     gap: 8px;
     margin-bottom: 100px;
 }
+
+.quote-container {
+    max-width: 780px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    padding: 100px 0;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: 200;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.quotee {
+    margin-left: auto;
+    font-size: 24px;
+    color: #1F2937;
+}
+
+.quote-main {
+    background-color: #E5E7EB;
+}
